--- a/client/src/containers/home/file/file.module.scss
+++ b/client/src/containers/home/file/file.module.scss
@@ -1,3 +1,39 @@
-.container {
-  width: 600px;
+
+.rootLayout {
+  display: flex;
+  flex-direction: column;
+  margin-bottom: 10px;
+  align-items: stretch;
+  padding: 10px;
+}
+
+.titleRow {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  min-height: 60px;
+}
+
+.title {
+  font-size: 20px;
+  flex-grow: 1;
+  text-align: left;
+}
+
+.statusIcon,
+.rotatingStatusIcon {
+  margin: 10px
+}
+
+@keyframes rotating {
+  from {
+    transform: rotate(360deg);
+  }
+  to {
+    transform: rotate(0deg);
+  }
+}
+
+.rotatingStatusIcon {
+  animation: rotating 1s linear infinite;
 }
