--- a/client/src/containers/home/home.module.scss
+++ b/client/src/containers/home/home.module.scss
@@ -1,5 +1,13 @@
+.rootContainer {
+  display: flex;
+  flex-direction: column;
+  align-items: stretch;
+  max-width: 600px;
+  margin: 40px auto;
+}
+
 .dropContainer {
-  width: 500px;
+  width: 100%;
   height: 150px;
   background: whitesmoke;
   border: 2px dashed grey;
