make UI even sexier

--- a/client/src/containers/home/file/file.module.scss
+++ b/client/src/containers/home/file/file.module.scss
@@ -21,8 +21,7 @@
   text-align: left;
 }
 
-.statusIcon,
-.rotatingStatusIcon {
+.statusIcon {
   margin: 10px
 }
 
@@ -35,6 +34,15 @@
   }
 }
 
-.rotatingStatusIcon {
+.failed {
+  color: darkred;
+}
+
+.uploading {
+  color: darkblue;
   animation: rotating 1s linear infinite;
+}
+
+.done {
+  color: darkgreen;
 }
