--- a/client/src/containers/home/file/file.module.scss
+++ b/client/src/containers/home/file/file.module.scss
@@ -2,7 +2,7 @@
 .rootLayout {
   display: flex;
   flex-direction: column;
-  margin-bottom: 10px;
+  margin-top: 10px;
   align-items: stretch;
   padding: 10px;
 }
