--- a/client/src/containers/home/file/file.module.scss
+++ b/client/src/containers/home/file/file.module.scss
@@ -21,6 +21,18 @@
   text-align: left;
 }
 
+.errorMessage {
+  padding: 5px;
+  font-size: 10px;
+  flex-grow: 1;
+  text-align: left;
+  color: #ff3a35;
+}
+
+.textWrapper {
+  flex-grow: 1;
+}
+
 .statusIcon {
   margin: 10px
 }
